2008-03-04 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.4
	
2008-03-03 Peter Spjuth   <peter.spjuth@gmail.com>
	* Require an explicit set font. *** INCOMPATIBLE CHANGE ***

2008-03-03 Peter Spjuth   <peter.spjuth@gmail.com>
	* Handle more general colors, including Tk colors.

2008-02-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* Addec canvas method to draw the contents of a canvas.

2008-02-26 Peter Spjuth   <peter.spjuth@gmail.com>
	* Redesigned API for arc, splitting r to rx/ry.
	  *** INCOMPATIBLE CHANGE ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Reworked drawTextBox to work correctly in all orientations.
	  This changes the implementation to keep the text within the box
	  which makes more sense. *** POTENTIAL INCOMPATIBILITY ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Renamed BeginTextObj and EndTextObj to make them internal.
	  The user should not need to bother with such details.
	* Removed moveTo and closePath methods since they had no apparent use.
	  *** POTENTIAL INCOMPATIBILITY ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Redesigned API for circle and polygon to be more sensible
	  and consistent. *** INCOMPATIBLE CHANGE ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added moveTextPosition method.

2008-02-15 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added document option -unit.

2008-02-13 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added PNG support.
	* Added addRawImage.
	* Added addImage as generic image method. addJpeg is now deprecated.

2008-02-10 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added setLineSpacing and getLineSpacing.
	  Use them in newLine. Contributed by "chd".

2008-02-06 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added height metric to getFontMetric.

2008-02-06 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added Tk's units "m", "c" and "p" to getPoints.

2008-01-21 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added putRawImage, contributed by Steve Redler.
