@@ -1,3 +1,6 @@
+2008-04-02 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Added -linesvar option to drawTextBox.
+
 2008-03-04 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Release 0.4
 	
